@@ -37,6 +37,7 @@ from Products.CMFCore.permissions import ManagePortal
 from Products.CPSDirectory.BaseDirectory import BaseDirectory
 
 from Products.CPSDirectory.interfaces import IDirectory
+from Products.CPSDirectory.interfaces import IContentishDirectory
 from Products.CPSDirectory.interfaces import IDirectoryTool
 
 from zope.interface import implements
@@ -52,7 +53,7 @@ class DirectoryTool(UniqueObject, IFAwareObjectManager, Folder):
 
     id = 'portal_directories'
     meta_type = 'CPS Directory Tool'
-    _product_interfaces = (IDirectory,)
+    _product_interfaces = (IDirectory, IContentishDirectory)
 
     security = ClassSecurityInfo()
 
