@@ -43,6 +43,7 @@ from Products.CPSDirectory.BaseDirectory import BaseDirectory
 from Products.CPSDirectory.BaseDirectory import AuthenticationFailed
 
 from Products.CPSDirectory.interfaces import IDirectory
+from Products.CPSDirectory.interfaces import IContentishDirectory
 
 from zope.interface import implements
 
@@ -56,7 +57,7 @@ class ZODBDirectory(PropertiesPostProcessor, BTreeFolder2,
     The entries are individual subobjects where the values are stored as
     simple attributes.
     """
-    implements(IDirectory)
+    implements(IContentishDirectory)
 
     meta_type = 'CPS ZODB Directory'
 
